update from feedback mentor for type strict
