# src/modules/users/users.controller.ts
@@ -1,52 +1,0 @@
-import {
-    BadRequestException,
-    Body,
-    Controller,
-    Get,
-    Param,
-    Patch,
-    UseGuards,
-    UsePipes,
-    ValidationPipe,
-} from '@nestjs/common';
-import { UsersService } from './users.service';
-import { UserRole } from 'src/common/enums/user-role.enum';
-import { JwtAuthGuard } from 'src/common/guards/jwt-auth.guard';
-import { UpdateUserDto } from 'src/modules/users/dto/update-user.dto';
-
-@Controller('users')
-export class UsersController {
-    constructor(private readonly usersService: UsersService) {}
-
-    @Get()
-    findAll() {
-        return this.usersService.findAll();
-    }
-
-    @Get('role/admin')
-    admin() {
-        return this.usersService.findByRole(UserRole.ADMIN);
-    }
-
-    @Get(':id')
-    findOne(@Param('id') id: string) {
-        return this.usersService.findOne(id);
-    }
-
-    @UseGuards(JwtAuthGuard)
-    @UsePipes(
-        new ValidationPipe({
-            whitelist: true,
-            forbidNonWhitelisted: true,
-            transform: true,
-            exceptionFactory: (errors) => {
-                console.error('Validation failed with errors:', errors);
-                return new BadRequestException(errors);
-            },
-        }),
-    )
-    @Patch(':id')
-    async update(@Param('id') id: string, @Body() dto: UpdateUserDto) {
-        return this.usersService.update(id, dto);
-    }
-}
